I fixed the margins and spacing.

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ body {
     width: 445px;
     height: 300px;
     margin-right: 0%;
-    padding-top: 15px;
 }
 
 .clearfix::after {
@@ -85,4 +84,11 @@ body {
 }
 p {
     padding-top: 25px;
+}
+
+.top-margin-fix:before{
+    content: ' ';
+    display: block;
+    width: 100%;
+    height: .0000001em;
 }
